--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <main>
     <section class="sectionOne" id="home">
       <div class="introduction">
-        <h1>Welcome To Hotel <span class="purpleText">Shivani</span> </h1>
+        <h1>Welcome To Hotel <span class="purpleText">Paradise</span> </h1>
         <p>A Place feels like Paradise.</p>
       </div>
     </section>
